# NegativeScanner

./: CMakeLists.txt  README.md  build.sh
include/: Camera.h  Color.h  Events.h  Image.h  ImageRenderer.h  ReadWriteMutex.h  ThreadPool.h  Vertex.h  Window.h  glIncludes.h  glInit.h
src/: Events.cpp  Image.cpp  ImageRenderer.cpp  NegativeScanner.cpp  ReadWriteMutex.cpp  Window.cpp  glInit.cpp
